// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`operations selectors  - publicChannels 1`] = `
Immutable.Map {
  "testaddress1": Immutable.PublicChannelData {
    "address": "testAddress1",
    "name": "testname1",
    "description": "sadadsdsadsa",
    "owner": "me",
    "timestamp": 0,
    "keys": Object {
      "ivk": "zivks14fgrxnk2f6qhtndxtc23cwy74kuyptq78qen9jq2ts2hnz0e7vrqazzyt1",
    },
  },
  "testaddress2": Immutable.PublicChannelData {
    "address": "XXXX2",
    "name": "testname2",
    "description": "sadadsdsadsa",
    "owner": "you",
    "timestamp": 0,
    "keys": Object {
      "ivk": "zivks14fgrxnk2f6qhtndxtc23cwy74kuyptq78qen9jq2ts2hnz0e7vrqazzyt2",
    },
  },
}
`;

exports[`operations selectors  - publicChannelsByAddress 1`] = `
Immutable.PublicChannelData {
  "address": "testAddress1",
  "name": "testname1",
  "description": "sadadsdsadsa",
  "owner": "me",
  "timestamp": 0,
  "keys": Object {
    "ivk": "zivks14fgrxnk2f6qhtndxtc23cwy74kuyptq78qen9jq2ts2hnz0e7vrqazzyt1",
  },
}
`;
